# haskellbook

./: .gitignore  README.md  applytree.hs  chapter11.hs  exo1.hs  exo8.hs  hutton.hs  phone.hs  pratice.hs  print1.hs
addition/: Addition.cabal  Addition.hs
arch/: applyTimes.hs  rpn.hs
arch/ch10/: fibs.hs  warmup.hs
arch/ch11/: aspatterns.hs  binTree.hs  vehicles.hs  vigenere.hs
arch/ch12/: eitherLib.hs  maybeLib.hs  replaceThe.hs  unfoldr.hs  validate.hs
arch/ch13/: person.hs
arch/ch13/hangman/hangman/src/: Main.hs
arch/ch14/: coarbi.hs
arch/ch14/morse/src/: Main.hs  Morse.hs
arch/ch14/morse/tests/: tests.hs
arch/ch14/wordnumber/: wordnumber.cabal
arch/ch14/wordnumber/src/: Main.hs  WordNumber.hs
arch/ch15/: madlibs.hs  maybemonoid.hs  mem.hs  monoid.hs
arch/ch15/orphan-instance/: Listy.hs
arch/ch16/: flipfunctor.hs  funcexos2.hs  lifting.hs  liftitout.hs  possibly.hs  whocares.hs
arch/ch17/: apl1.hs  applilesson2.hs  applilesson4.hs  combinations.hs
arch/ch2/: FunctionWithLet.hs
arch/ch3/: TakeSome.hs  TopOrLocal.hs
arch/ch4/: Moods.hs  addStuff.hs
arch/ch5/: signatures.hs  typeExercise.hs  typekwondo.hs
arch/ch6/: matchtypes.hs  typeKwonDoTwo.hs
arch/ch7/: arith4.hs  digits.hs
arch/ch8/: dividedBy.hs
arch/ch9/: listsexo.hs  stdFunc.hs
arch/firstattempt/: chapter12.hs  helloWorld.hs  learn.hs  print2.hs
arch/firstattempt/addition/: Addition.cabal
arch/firstattempt/hangman/: hangman.cabal
arch/firstattempt/hello-haskell/: hello-haskell.cabal
ch10/: dbProcess.hs  stdFold.hs
ch11/: daphone.hs  tooMany.hs  typeex.hs
ch12/: .#validate.hs  treeFold.hs
ch13/: forever.hs
ch13/hangman/hangman/: hangman.cabal
ch13/hello/: stack.yaml
ch13/hello/exe/: Main.hs
ch13/hello/src/: DogsRule.hs  Hello.hs
ch14/: arbi.hs  exqc.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/morse/: morse.cabal
ch14/wordnumber/test/: tests.hs
ch15/: assoc.hs  boolmonoid.hs  monoids.hs  optional.hs  semgroup.hs
ch15/orphan-instance/: ListyInstances.hs
ch16/: funcexos.hs  functor.hs
ch17/: appliexos.hs  applilesson.hs  applilesson3.hs  applimaybe.hs  badmonoid.hs  fixerupper.hs  listappl.hs  validation.hs
ch18/: badMonad.hs  bind1.hs  eithermonad.hs  maybemonad.hs  monadex.hs  monadex2.hs  monadex3.hs  monadex4.hs  monadex5.hs
ch2/: WaxOn.hs  learn.hs  test.hs
ch20/: foldable1.hs  foldable2.hs
ch21/: #refacto.hs#  skiFree.hs  trav1.hs  trav2.hs  trav3.hs  trav4.hs  trav5.hs  trav6.hs  trav7.hs  trav8.hs  tree.hs
ch3/: Print3Broken.hs  print2.hs  print3.hs
ch4/: CorrectSyntax.hs  Moods.hs
ch5/: Arith3Broken.hs  correctFunctions.hs  doesItCompile.hs  sing.hs
ch6/: trivial.hs
ch7/: artfulDodgy.hs  case.hs  digits.hs  guards.hs  ifthenelse.hs
ch8/: mcCarthy91.hs  wordNumbers.hs
ch9/: .#fearfullsym.hs  caesar.hs  dbProcess.hs  enumFromTo.hs  exos.hs  fearfullsym.hs  poemLine.hs
firstattempt/: diamond.hs  dogtypes.hs  exo2.hs  jammin.hs  rnum.hs
firstattempt/hangman/: LICENSE
firstattempt/hello-haskell/src/: Main.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
hello-haskell/: hello-haskell.cabal
hello-haskell/src/: Hello.hs  Main.hs
