name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  ghc-option:          -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5
                     , morse
                     , containers
                     , QuickCheck
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base
                     , morse
                     , containers
                     , QuickCheck
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

