name:                wordnumber
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wordnumber#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

executable wordnumer
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && <5
                     , containers
                     , wordnumber

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , wordnumber
                     , hspec
                     , containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

